flux section completed